--- a/public/static/css/styles2.css
+++ b/public/static/css/styles2.css
@@ -4,7 +4,7 @@ section {
 }
 
 .fields {
-  width: 24%;
+  width: 24.5%;
   display: inline-block;
 }
 .fields div {
@@ -16,4 +16,9 @@ section {
 .thumbnail {
   max-width:50px;
   max-height:50px;
+}
+
+#nav-main ul li {
+  display: inline;
+  padding: 0 10px;
 }
